@@ -1,3 +1,4 @@
+221208 value iteration gamma fixed
 221124 atari unreliability fixed
 221123 optimize atari
 221108 add tri-hashing
